<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewDeclarationGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.wolfpack.wolfpackapp.declarations.add.GeneralDeclarationFragment">

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonBTW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/btw"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate2" />

    <TextView
        android:id="@+id/textViewDate2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Date"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <ToggleButton
        android:id="@+id/toggleButtonBTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="92dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewTotalExclBTW"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_without_btw"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <EditText
        android:id="@+id/editTextTotalExclBTW"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/zero_euro"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalExclBTW"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTotalExclEuroSign"
        android:layout_width="16dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/eruo_sign"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTotalExclBTW"
        app:layout_constraintEnd_toStartOf="@+id/editTextTotalExclBTW" />

    <TextView
        android:id="@+id/textViewBTW"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/btw"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalExclBTW" />

    <TextView
        android:id="@+id/textViewBTWEuroSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/eruo_sign"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextBTW"
        app:layout_constraintEnd_toStartOf="@+id/editTextBTW" />

    <EditText
        android:id="@+id/editTextBTW"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/zero_euro"
        android:inputType="textPersonName|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewBTW"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="46dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="168dp"
        android:text="@string/total"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalAmount"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalEuroSign"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTotalEuroSign"
        android:layout_width="14dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/eruo_sign"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalAmount"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalAmount" />

    <TextView
        android:id="@+id/textViewTotalAmount"
        android:layout_width="111dp"
        android:layout_height="26dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/zero_euro"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBTW"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>