<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.wolfpack.wolfpackapp.declarations.DeclarationsFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActioButtonAddDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@android:color/background_dark"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutDeclarations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemSubmitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_submitted" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemAccepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_accepted" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemDrafts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_drafts" />
    </android.support.design.widget.TabLayout>

    <fragment
        android:id="@+id/fragment2"
        android:name="nl.wolfpack.wolfpackapp.declarations.DeclarationSearchFragment"
        android:layout_width="367dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutDeclarations" />

</android.support.constraint.ConstraintLayout>